--- a/config/messages/app_ru.properties
+++ b/config/messages/app_ru.properties
@@ -2,10 +2,17 @@ app.title=Поиск ИТ-вакансий
 app.footer=Приложение поиска IT вакансий по примеру
 
 user.name=Имя
+user.name_=имя
 user.email=Почта
+user.email_=почту
 user.roles=Роль
 user.active=Активный
 user.registered=Регистрация
+user.user_new=нового пользователя
+user.add_new=Добавить нового пользователя
+user.password=Пароль
+user.password_=пароль
+
 
 vacancy.vacancy=Вакансия
 vacancy.employer=Компания
@@ -45,7 +52,8 @@ vacancy.refresh=Обновить
 vacancy.kyiv=Киев
 
 common.add=Добавить
-common.back=Сбросить
+common.back=Закрыть
+common.return=Возвратиться
 common.save=Сохранить
 common.edit=Редактировать
 common.you_sure='Вы уверенны?'
