--- a/config/messages/app_ua.properties
+++ b/config/messages/app_ua.properties
@@ -1,17 +1,23 @@
 app.title=Пошук ІТ-вакансій
 app.footer=Додаток пошуку ІТ вакансії за прикладом
 
-user.name=Им'я
+user.name=Ім'я
+user.name_=ім'я
 user.email=Пошта
+user.email_=пошту
 user.roles=Ролі
 user.active=Активний
 user.registered=Реєстрація
+user.user_new=нового користувача
+user.add_new=Додати нового користувача
+user.password=Пароль
+user.password_=пароль
 
 vacancy.vacancy=Ввакансія
 vacancy.employer=Компанія
-vacancy.address=місто
+vacancy.address=Місто
 vacancy.employer_=компанія
-vacancy.address_=Місто
+vacancy.address_=місто
 vacancy.from=від $
 vacancy.to=до $
 vacancy.skills=Навички
@@ -46,7 +52,8 @@ vacancy.refresh=Обновити
 vacancy.kyiv=Київ
 
 common.add=Додати
-common.back=Назад
+common.back=Закрити
+common.return=Повернутись
 common.save=Зберегти
 common.edit=Редагувати
 common.you_sure='Ви впевнені?'
