--- a/config/messages/app_ru.properties
+++ b/config/messages/app_ru.properties
@@ -52,6 +52,7 @@ vacancy.refresh=Обновить
 vacancy.kyiv=Киев
 
 common.add=Добавить
+common.reset=Сбросить
 common.back=Закрыть
 common.return=Возвратиться
 common.save=Сохранить
