22. i18n, debug_double_email

--- a/config/messages/app_ru.properties
+++ b/config/messages/app_ru.properties
@@ -7,19 +7,18 @@ user.email=Почта
 user.email_=почту
 user.roles=Роль
 user.active=Активный
-user.registered=Регистрация
-user.user_new=нового пользователя
-user.add_new=Добавить нового пользователя
+user.registered=Зарегистрирован
 user.password=Пароль
 user.password_=пароль
-
+user.add=Добавить нового пользователя
+user.edit=Редактировать данные пользователя
 
 vacancy.vacancy=Вакансия
 vacancy.employer=Компания
 vacancy.address=Город
 vacancy.employer_=название компании
 vacancy.address_=город
-vacancy.from=от
+vacancy.from=от $ 
 vacancy.to=до $
 vacancy.skills=Навыки
 vacancy.date=Дата
@@ -27,39 +26,45 @@ vacancy.language=Язык программирования
 vacancy.language_=язык программирования
 vacancy.level=Уровень
 vacancy.workplace=Город
-vacancy.vew_vacancy=Добавить вакансию
 vacancy.refresh_db=Обновить БД
+
 vacancy.vacancy_name=Название вакансии
 vacancy.vacancy_name_=название вакансии
-vacancy.from_cent=от (usd cent)
-vacancy.to_cent=до (usd cent)
-vacancy.from_cent_=зарплату минимальную (usd cent)
-vacancy.to_cent_=зарплату максимальную (usd cent)
+vacancy.from_cent=от ($US cent)
+vacancy.to_cent=до ($US cent)
+vacancy.from_cent_=зарплату минимальную ($US cent)
+vacancy.to_cent_=зарплату максимальную ($US cent)
 vacancy.url=url
 vacancy.skills_knowledge_experience=Навыки, знания, опыт
 vacancy.skills_knowledge_experience_=требуемые навыки, знания, опыт
-vacancy.refresh_db_by_datas=Обновить БД по параметрам:
+vacancy.refresh_db_by=Обновить БД по параметрам:
 vacancy.please_enter=введите пожалуйста
 vacancy.please_enter_workplace=введите пожалуйста желаемое место работы...
 vacancy.select_or_print_your=введите любой
 vacancy.print=введите
-vacancy.workplace_=место работы
-vacancy.level_=level...
 vacancy.filter=Фильтровать
-vacancy.wait=идет загрузка... подождите пару минут...<br>после 2 мин нажмите  
+vacancy.wait=Началась загрузка... через 2 мин нажмите  
 vacancy.refresh=Обновить  
+vacancy.add=Добавить вакансию
+vacancy.edit=Редактировать вакансию
 
 vacancy.kyiv=Киев
 
-common.add=Добавить
+common.close=Закрыть
 common.reset=Сбросить
-common.back=Закрыть
-common.return=Возвратиться
 common.save=Сохранить
-common.edit=Редактировать
-common.you_sure='Вы уверенны?'
-
-body_header.profile=Профиль
+common.deleted=Запись удалена
+common.saved=Запись сохранена
+common.enabled=Запись активирована
+common.disabled=Запись деактивирована
+common.select=Запись отмечена
+common.deselected=Отметка снята
+common.errorStatus=Статус ошибки
+common.errorType=Тип ошибки
+common.confirm=Вы уверены?
+common.updated=Обновление успешно завершено
+common.profile=Профиль
+common.register=Регистрация нового пользователя
 body_header.users=Пользователи
 body_header.title=IT вакансий
 
@@ -68,13 +73,11 @@ login.registration=Регистрация &raquo;
 login.as_admin=Войти как Admin
 login.as_user=Войти как User
 login.project=Java Enterprise проект
-login.body= с регистрацией / авторизацией и правами доступа на основе ролей (USER, ADMIN).<br/>Администратор может создавать / редактировать / удалять пользователей и вакансии, пользователи могут управлять своим профилем через UI (по AJAX) и по REST интерфейсу с базовой авторизацией. Вакансии можно фильтровать / обновлять / отмечать (меняется цвет строки, индивидуальный выбор сохраняется в базе данных).<br/>REST и все сервисы покрываются JUnit тестами, при этом используется Spring MVC Test и Spring SecurityTest.<br/>Для тестов используется HSQLDB. Актуальные вакансии хранятся в PostgreSQL(или H2DB), обновляются из ресурсов:<br/>
+login.body= с регистрацией | авторизацией и правами доступа на основе ролей (USER, ADMIN).<br/>Администратор может создавать | редактировать | удалять пользователей и вакансии, пользователи могут управлять своим профилем через UI (по AJAX) и по REST интерфейсу с базовой авторизацией. Вакансии можно фильтровать | обновлять | отмечать (меняется цвет строки, индивидуальный выбор сохраняется в базе данных).<br/>REST и все сервисы покрываются JUnit тестами, при этом используется Spring MVC Test и Spring SecurityTest.<br/>Для тестов используется HSQLDB. Актуальные вакансии хранятся в PostgreSQL(или H2DB), обновляются из ресурсов:<br/>
 login.doc=документация
 
 password.password=Пароль :
 password.confirm=Подтвердить :
 exception.error_data=Ошибка проверки данных
 
-profile.profile=Профиль
-profile.register=Регистрация
 
