--- a/config/messages/app_ua.properties
+++ b/config/messages/app_ua.properties
@@ -7,11 +7,11 @@ user.email=Пошта
 user.email_=пошту
 user.roles=Ролі
 user.active=Активний
-user.registered=Реєстрація
-user.user_new=нового користувача
-user.add_new=Додати нового користувача
+user.registered=Зареєстрований
 user.password=Пароль
 user.password_=пароль
+user.add=Додати нового користувача
+user.edit=Редагувати користувача
 
 vacancy.vacancy=Ввакансія
 vacancy.employer=Компанія
@@ -26,7 +26,6 @@ vacancy.language=Мова програмування
 vacancy.language_=мова програмування
 vacancy.level=Рівень
 vacancy.workplace=Місце роботи
-vacancy.vew_vacancy =Додати вакансію
 vacancy.refresh_db =Обновити БД
 
 vacancy.vacancy_name=Назва вакансії
@@ -43,22 +42,29 @@ vacancy.please_enter=введіть будь-ласка
 vacancy.please_enter_workplace=введіть будьласка бажане месце работы...
 vacancy.select_or_print_your=введіть будь-який
 vacancy.print=введіть
-vacancy.workplace_=месце роботи
-vacancy.level_=level...
 vacancy.filter=Фільтр
 vacancy.wait=йде завантаження... зачекайте 1-2 хв...<br>через 2 хв
 vacancy.refresh=Обновити  
+vacancy.add=Додати вакансію
+vacancy.edit=Редагувати вакансію
 
 vacancy.kyiv=Київ
 
-common.add=Додати
-common.back=Закрити
-common.return=Повернутись
+common.close=Закрити
 common.save=Зберегти
-common.edit=Редагувати
-common.you_sure='Ви впевнені?'
-
-body_header.profile=Профіль
+common.reset=Сбросить
+common.deleted=Запис видалено
+common.saved=Запис збережено
+common.enabled=Запис активовано
+common.disabled=Запис деактивовано
+common.select=Запис помічено
+common.deselected=Помітку знято
+common.errorStatus=Статус помилки
+common.errorType=Тип помилки
+common.confirm=Ви впевнені?
+common.updated=Обновлення успішно завершено
+common.profile=Профіль
+common.register=Регістрація нового користувача
 body_header.users=Корістувачі
 body_header.title=ІТ вакансій
 
@@ -74,5 +80,3 @@ password.password=Пароль:
 password.confirm=Підтвердити:
 exception.error_data=Помилка перевірки даних
 
-profile.profile=Профіль
-profile.register=Регістрація
