--- a/config/messages/app_ru.properties
+++ b/config/messages/app_ru.properties
@@ -30,10 +30,10 @@ vacancy.refresh_db=Обновить БД
 
 vacancy.vacancy_name=Название вакансии
 vacancy.vacancy_name_=название вакансии
-vacancy.from_cent=от ($US cent)
-vacancy.to_cent=до ($US cent)
-vacancy.from_cent_=зарплату минимальную ($US cent)
-vacancy.to_cent_=зарплату максимальную ($US cent)
+vacancy.from_cent=от ($USD cent)
+vacancy.to_cent=до ($USD cent)
+vacancy.from_cent_=зарплату минимальную ($USD cent)
+vacancy.to_cent_=зарплату максимальную ($USD cent)
 vacancy.url=url
 vacancy.skills_knowledge_experience=Навыки, знания, опыт
 vacancy.skills_knowledge_experience_=требуемые навыки, знания, опыт
@@ -50,6 +50,7 @@ vacancy.edit=Редактировать вакансию
 
 vacancy.kyiv=Киев
 
+common.delete=Удалить
 common.close=Закрыть
 common.reset=Сбросить
 common.save=Сохранить
@@ -60,8 +61,8 @@ common.disabled=Запись деактивирована
 common.select=Запись отмечена
 common.deselected=Отметка снята
 common.errorStatus=Статус ошибки
-common.errorType=Тип ошибки
 common.confirm=Вы уверены?
+common.confirm_label=Подтвердите пожалуйста !
 common.updated=Обновление успешно завершено
 common.profile=Профиль
 common.register=Регистрация нового пользователя
