--- a/config/messages/app_uk.properties
+++ b/config/messages/app_uk.properties
@@ -5,7 +5,7 @@ user.name=Ім'я
 user.name_=ім'я
 user.email=Пошта
 user.email_=пошту
-user.roles=Ролі
+user.roles=Роль
 user.active=Активний
 user.registered=Зареєстрований
 user.password=Пароль
@@ -25,47 +25,48 @@ vacancy.date=Дата
 vacancy.language=Мова програмування
 vacancy.language_=мова програмування
 vacancy.level=Рівень
-vacancy.workplace=Місце роботи
-vacancy.refresh_db =Обновити БД
+vacancy.workplace=Місце
+vacancy.refresh_db =Оновити БД
 
 vacancy.vacancy_name=Назва вакансії
 vacancy.vacancy_name_=назву вакансії
-vacancy.from_cent=від (usd cent)
-vacancy.to_cent=до (usd cent)
-vacancy.from_cent_=зарплату мінімальну (usd cent)
-vacancy.to_cent_=зарплату максимальну (usd cent)
+vacancy.from_cent=від ($USD cent)
+vacancy.to_cent=до ($USD cent)
+vacancy.from_cent_=зарплату мінімальну ($USD cent)
+vacancy.to_cent_=зарплату максимальну ($USD cent)
 vacancy.url=url
 vacancy.skills_knowledge_experience=Навички, знання, досвід
 vacancy.skills_knowledge_experience_=необхідні навички, знання, досвід
-vacancy.refresh_db_by_datas=Обновити БД по параметрам:
+vacancy.refresh_db_by=Обновити БД по параметрам:
 vacancy.please_enter=введіть будь-ласка
-vacancy.please_enter_workplace=введіть будьласка бажане месце работы...
+vacancy.please_enter_workplace=введіть будь-ласка бажане месце работы...
 vacancy.select_or_print_your=введіть будь-який
 vacancy.print=введіть
 vacancy.filter=Фільтр
-vacancy.wait=йде завантаження... зачекайте 1-2 хв...<br>через 2 хв
-vacancy.refresh=Обновити  
+vacancy.wait=йде завантаження, чекайте 1-2 хв...потім тисніть 
+vacancy.refresh=Оновити  
 vacancy.add=Додати вакансію
 vacancy.edit=Редагувати вакансію
 
 vacancy.kyiv=Київ
 
+common.delete=Видалити
 common.close=Закрити
 common.save=Зберегти
-common.reset=Сбросить
+common.reset=Скинути
 common.deleted=Запис видалено
 common.saved=Запис збережено
 common.enabled=Запис активовано
 common.disabled=Запис деактивовано
-common.select=Запис помічено
+common.select=Запис відмічено
 common.deselected=Помітку знято
 common.errorStatus=Статус помилки
-common.errorType=Тип помилки
-common.confirm=Ви впевнені?
+common.confirm=Чи Ви впевнені?
+common.confirm_label=Подтвердіть будь-ласка !
 common.updated=Обновлення успішно завершено
 common.profile=Профіль
 common.register=Регістрація нового користувача
-body_header.users=Корістувачі
+body_header.users=Всі Користувачі
 body_header.title=ІТ вакансій
 
 login.stack=Стек технологій: 
@@ -73,10 +74,9 @@ login.registration=Реєстрація &raquo;
 login.as_admin=Увійти як Admin
 login.as_user=Увійти як User
 login.project=Java Enterprise проект
-login.body= з реєстрацією / авторизацією та правами доступу на основі ролей (USER, ADMIN).<br/>Адміністратор може створювати / редагувати / видаляти користувачів і вакансії, користувачі можуть керувати своїм профілем через UI (по AJAX) і по REST інтерфейсу з базовою авторизацією. Вакансії можна фільтрувати / оновлювати / відзначати (змінюється колір рядка, індивідуальний вибір зберігається в базі даних).<br/>REST і всі сервіси покриваються JUnit тестами, при цьому використовується Spring MVC Test і Spring SecurityTest.<br> />Для тестів використовується HSQLDB. Актуальні вакансії зберігаються у PostgreSQL (або H2DB), оновлюються з ресурсів:<br/>
+login.body= з реєстрацією | авторизацією та правами доступу на основі ролей (USER, ADMIN).<br/>Адміністратор може створювати | редагувати | видаляти користувачів і вакансії, користувачі можуть керувати своїм профілем через UI (по AJAX) і по REST інтерфейсу з базовою авторизацією. Вакансії можна фільтрувати | оновлювати | індивідуально вибирати (змінюється колір рядка, індивідуальний вибір зберігається в базі даних).<br/>REST і всі сервіси покриваються JUnit тестами, при цьому використовується Spring MVC Test і Spring SecurityTest.<br>Для тестів застосовується HSQLDB. Актуальні вакансії зберігаються у PostgreSQL (або H2DB), оновлюються з ресурсів:<br/>
 login.doc=документація
 
 password.password=Пароль:
 password.confirm=Підтвердити:
 exception.error_data=Помилка перевірки даних
-
