--- a/config/messages/app_uk.properties
+++ b/config/messages/app_uk.properties
@@ -12,7 +12,10 @@ user.password=Пароль
 user.password_=пароль
 user.add=Додати нового користувача
 user.edit=Редагувати користувача
+user.invite=Вы зареєстровані. Будь-ласка, можете ввійти в додаток
+user.duplicate=Уже існує Користувач з Email: 
 
+vacancy.duplicate=Вакансія вже існує в БД 
 vacancy.vacancy=Ввакансія
 vacancy.employer=Компанія
 vacancy.address=Місто
@@ -63,10 +66,10 @@ common.deselected=Помітку знято
 common.errorStatus=Статус помилки
 common.confirm=Чи Ви впевнені?
 common.confirm_label=Подтвердіть будь-ласка !
-common.updated=Обновлення успішно завершено
+common.updated=Обновлення завершено
 common.profile=Профіль
-common.register=Регістрація нового користувача
-body_header.users=Всі Користувачі
+common.register=Реєстрація нового Користувача
+body_header.users=Усі Користувачі
 body_header.title=ІТ вакансій
 
 login.stack=Стек технологій: 
@@ -74,7 +77,7 @@ login.registration=Реєстрація &raquo;
 login.as_admin=Увійти як Admin
 login.as_user=Увійти як User
 login.project=Java Enterprise проект
-login.body= з реєстрацією | авторизацією та правами доступу на основі ролей (USER, ADMIN).<br/>Адміністратор може створювати | редагувати | видаляти користувачів і вакансії, користувачі можуть керувати своїм профілем через UI (по AJAX) і по REST інтерфейсу з базовою авторизацією. Вакансії можна фільтрувати | оновлювати | індивідуально вибирати (змінюється колір рядка, індивідуальний вибір зберігається в базі даних).<br/>REST і всі сервіси покриваються JUnit тестами, при цьому використовується Spring MVC Test і Spring SecurityTest.<br>Для тестів застосовується HSQLDB. Актуальні вакансії зберігаються у PostgreSQL (або H2DB), оновлюються з ресурсів:<br/>
+login.body= з реєстрацією | авторизацією та правами доступу на основі ролей (USER, ADMIN).<br/>Адміністратор може створювати | редагувати | видаляти користувачів і вакансії, користувачі можуть керувати своїм профілем через UI (по AJAX) і по REST інтерфейсу з базовою авторизацією. Вакансії можна фільтрувати | оновлювати | індивідуально обирати (змінюється колір рядка, індивідуальний вибір зберігається в базі даних).<br/>REST і всі сервіси покриваються JUnit тестами, при цьому використовується Spring MVC Test і Spring SecurityTest.<br>Для тестів застосовується HSQLDB. Актуальні вакансії зберігаються у PostgreSQL (або H2DB), оновлюються з ресурсів:<br/>
 login.doc=документація
 
 password.password=Пароль:
