--- a/config/messages/app_ru.properties
+++ b/config/messages/app_ru.properties
@@ -12,7 +12,10 @@ user.password=Пароль
 user.password_=пароль
 user.add=Добавить нового пользователя
 user.edit=Редактировать данные пользователя
+user.invite=Вы зарегистрированы. Пожалуйста, можете войти в приложение
+user.duplicate=Уже есть Пользователь с Email: 
 
+vacancy.duplicate=Вакансия уже есть в базе данных 
 vacancy.vacancy=Вакансия
 vacancy.employer=Компания
 vacancy.address=Город
@@ -63,9 +66,9 @@ common.deselected=Отметка снята
 common.errorStatus=Статус ошибки
 common.confirm=Вы уверены?
 common.confirm_label=Подтвердите пожалуйста !
-common.updated=Обновление успешно завершено
+common.updated=Обновление завершено
 common.profile=Профиль
-common.register=Регистрация нового пользователя
+common.register=Регистрация нового Пользователя
 body_header.users=Пользователи
 body_header.title=IT вакансий
 
