--- a/config/messages/app_ru.properties
+++ b/config/messages/app_ru.properties
@@ -13,7 +13,7 @@ user.password_=пароль
 user.add=Добавить нового пользователя
 user.edit=Редактировать данные пользователя
 user.invite=Вы зарегистрированы. Пожалуйста, можете войти в приложение
-user.duplicate=Уже есть Пользователь с Email: 
+user.duplicate=Уже есть Пользователь с таким Email 
 
 vacancy.duplicate=Вакансия уже есть в базе данных 
 vacancy.vacancy=Вакансия
