--- a/config/messages/app_ru.properties
+++ b/config/messages/app_ru.properties
@@ -13,7 +13,7 @@ user.password_=пароль
 user.add=Добавить нового пользователя
 user.edit=Редактировать данные пользователя
 user.invite=Вы зарегистрированы. Пожалуйста, можете войти в приложение
-user.duplicate=Уже есть Пользователь с таким Email 
+user.duplicate=Пользователь с таким Email раньше уже зарегистрирован
 
 vacancy.duplicate=Вакансия уже есть в базе данных 
 vacancy.vacancy=Вакансия
@@ -53,6 +53,7 @@ vacancy.edit=Редактировать вакансию
 
 vacancy.kyiv=Киев
 
+common.search=Искать
 common.delete=Удалить
 common.close=Закрыть
 common.reset=Сбросить
@@ -63,7 +64,6 @@ common.enabled=Запись активирована
 common.disabled=Запись деактивирована
 common.select=Запись отмечена
 common.deselected=Отметка снята
-common.errorStatus=Статус ошибки
 common.confirm=Вы уверены?
 common.confirm_label=Подтвердите пожалуйста !
 common.updated=Обновление завершено
@@ -84,4 +84,17 @@ password.password=Пароль :
 password.confirm=Подтвердить :
 exception.error_data=Ошибка проверки данных
 
+error.appError=Ошибка приложения
+error.dataNotFound=Данные не найдены
+error.dataError=Ошибка в данных
+error.validationError=Ошибка проверки данных
+error.wrongRequest=Неверный запрос
+
+NotEmpty=[{0}] не должно быть пустым
+NotBlank=[{0}] не должно быть пустым
+NotNull=[{0}] не должно быть пустым
+Email=Неверный формат [{0}]
+Range= [{0}] должно быть между {2} и {1}
+Length=Длинна [{0}] должна быть между {2} и {1}
+Size=Размер [{0}] должен быть между {2} и {1}
 
