--- a/config/messages/app_uk.properties
+++ b/config/messages/app_uk.properties
@@ -13,7 +13,7 @@ user.password_=пароль
 user.add=Додати нового користувача
 user.edit=Редагувати користувача
 user.invite=Вы зареєстровані. Будь-ласка, можете ввійти в додаток
-user.duplicate=Уже існує Користувач з таким Email 
+user.duplicate=Користувач з таким Email раніше уже зареєстрований 
 
 vacancy.duplicate=Вакансія вже існує в БД 
 vacancy.vacancy=Ввакансія
@@ -53,6 +53,7 @@ vacancy.edit=Редагувати вакансію
 
 vacancy.kyiv=Київ
 
+common.search=Шукати
 common.delete=Видалити
 common.close=Закрити
 common.save=Зберегти
@@ -83,3 +84,18 @@ login.doc=документація
 password.password=Пароль:
 password.confirm=Підтвердити:
 exception.error_data=Помилка перевірки даних
+
+error.appError=Помилка застосунка
+error.dataNotFound=Дані не знайдені
+error.dataError=Помилка в даних
+error.validationError=Помилка перевірки даних
+error.wrongRequest=Невірний запит
+
+NotEmpty=[{0}] не повинно бути пустим
+NotBlank=[{0}] не повинно бути пустим
+NotNull=[{0}] не повинно бути пустим
+Email=Невірний формат [{0}]
+Range= [{0}] повинно бути між {2} и {1}
+Length=Довжина [{0}] повинна бути між {2} и {1}
+Size=Розмір [{0}] повинен бути між {2} и {1}
+
