26. language_locale (uk,en,ru)

--- a/config/messages/app_uk.properties
+++ b/config/messages/app_uk.properties
@@ -13,7 +13,7 @@ user.password_=пароль
 user.add=Додати нового користувача
 user.edit=Редагувати користувача
 user.invite=Вы зареєстровані. Будь-ласка, можете ввійти в додаток
-user.duplicate=Користувач з таким Email раніше уже зареєстрований 
+user.duplicate=Користувач з таким Email раніш уже зареєстрований 
 
 vacancy.duplicate=Вакансія вже існує в БД 
 vacancy.vacancy=Ввакансія
