--- a/config/messages/app_bg.properties
+++ b/config/messages/app_bg.properties
@@ -46,10 +46,10 @@ vacancy.please_enter_workplace=моля, въведете мястото на р
 vacancy.select_or_print_your=изберете или отпечатайте вашите
 vacancy.print=печат моля
 vacancy.filter=Филтър
-vacancy.wait=Актуализацията започна, изчакайте 1-2 минути... от зададеното
+vacancy.wait=Актуализацията започна, изчакайте 1-2 минути... <br/>от зададеното
 vacancy.refresh=Опресни
-vacancy.add=Добавяне на свободно място
-vacancy.edit=Редактиране на свободно място
+vacancy.add=Добавяне длъжност
+vacancy.edit=Редактиране длъжност
 
 vacancy.kyiv=Киев
 
@@ -77,7 +77,7 @@ login.registration=Регистрация &raquo;
 login.as_admin=Влезте като Admin
 login.as_user=Влезте като User
 login.project=Проект Java Enterprise
-login.body=с регистрация | оторизация и права за достъп, базирани на роли (ПОТРЕБИТЕЛ, АДМИНИСТРАТОР).<br/>Администраторът може да създаде | редактиране | изтриване на потребители и свободни работни места, потребителите могат да управляват своя профил чрез потребителски интерфейс (чрез AJAX) и REST интерфейс с основно разрешение. Свободните работни места могат да бъдат филтрирани | актуализиран | маркирани (цветът на редовете се променя, индивидуалният избор се съхранява в DB).<br/>REST контролерите и всички услуги са обхванати от JUnit тестове с помощта на Spring MVC Test и Spring SecurityTest.<br/> HSQLDB се използва за тестове. Действителните свободни позиции се съхраняват в PostgreSQL (или H2DB) и се актуализират от ресурси:<br/>
+login.body=с регистрация | оторизация и права за достъп, базирани на роли (USER, ADMIN).<br/>Администраторът може да създаде | редактиране | изтриване на потребители и свободни работни места, потребителите могат да управляват своя профил чрез потребителски интерфейс (чрез AJAX) и REST интерфейс с основно разрешение. Свободните работни места могат да бъдат филтрирани | актуализиран | маркирани (цветът на редовете се променя, индивидуалният избор се съхранява в DB). REST контролерите и всички услуги са обхванати от JUnit тестове с помощта на Spring MVC Test и Spring SecurityTest. HSQLDB се използва за тестове. Действителните свободни позиции се съхраняват в PostgreSQL (или H2DB) и се актуализират от ресурси:<br/>
 login.doc=Документация
 
 password.password=Парола :
