--- a/config/messages/app_de.properties
+++ b/config/messages/app_de.properties
@@ -2,14 +2,14 @@ app.title=Suche nach IT-Stellenangeboten
 app.footer=Eine Anwendung nach dem Beispiel von
 
 user.name=Name
-user.name_=Name
-user.email=E-Mail
-user.email_=E-Mail
+user.name_=name
+user.email=Email
+user.email_=email
 user.roles=Rollen
 user.active=aktiv
 user.registered=Registriert
 user.password=Passwort
-user.password_=Passwort
+user.password_=passwort
 user.add=Neuen Benutzer hinzufügen
 user.edit=Daten für Benutzer bearbeiten
 user.invite=Sie sind bereits registriert. Bitte einloggen
@@ -19,24 +19,24 @@ vacancy.duplicate=Vakanz existiert bereits
 vacancy.vacancy=Stelle frei
 vacancy.employer=Unternehmen
 vacancy.address=Stadt
-vacancy.employer_=Firmenname
-vacancy.address_=Stadt
+vacancy.employer_=firmenname
+vacancy.address_=stadt
 vacancy.from=von
 vacancy.to=zu $
 vacancy.skills=Fähigkeiten
 vacancy.date=Datum
 vacancy.language=Programmiersprache
-vacancy.language_=Programmiersprache
+vacancy.language_=programmiersprache
 vacancy.level=Stufe
 vacancy.workplace=Arbeitsplatz
 vacancy.refresh_db=DB aktualisieren
 
 vacancy.vacancy_name=Stellenname
-vacancy.vacancy_name_=Stellenname
+vacancy.vacancy_name_=stellenname
 vacancy.from_cent=ab ($USD Cent)
 vacancy.to_cent=bis ($USD Cent)
-vacancy.from_cent_=Mindestgehalt ($USD Cent)
-vacancy.to_cent_=Gehaltsmaximum ($USD Cent)
+vacancy.from_cent_=mindestgehalt ($USD Cent)
+vacancy.to_cent_=gehaltsmaximum ($USD Cent)
 vacancy.url=url
 vacancy.skills_knowledge_experience=Fähigkeiten, Wissen, Erfahrung...
 vacancy.skills_knowledge_experience_=erforderliche Fähigkeiten, Kenntnisse, Erfahrung...
@@ -46,7 +46,7 @@ vacancy.please_enter_workplace=Bitte geben Sie den gewünschten Arbeitsort ein
 vacancy.select_or_print_your=wählen oder drucken Sie Ihre aus
 vacancy.print=Bitte drucken
 vacancy.filter=Filtern
-vacancy.wait=Aktualisierung gestartet, warte 1-2 min... als eingestellt
+vacancy.wait=Aktualisierung gestartet, warte 1-2 min... <br/>als eingestellt
 vacancy.refresh=Aktualisieren
 vacancy.add=Stellenanzeige hinzufügen
 vacancy.edit=Vakanz bearbeiten
@@ -77,7 +77,7 @@ login.registration=Registrierung &raquo;
 login.as_admin=Melden Sie sich als Admin an
 login.as_user=Als User anmelden
 login.project=Java Enterprise-Projekt
-login.body=mit Registrierung | Autorisierung und rollenbasierte Zugriffsrechte (USER, ADMIN).<br/>Administrator kann | erstellen bearbeiten | Benutzer und Stellenangebote löschen, Benutzer können ihr Profil über UI (über AJAX) und REST-Schnittstelle mit Basisberechtigung verwalten. Stellenangebote können gefiltert werden | aktualisiert | markiert (Farbe der Zeilen ändert sich, individuelle Auswahl wird in DB gespeichert).<br/>REST-Controller und alle Dienste werden durch JUnit-Tests mit Spring MVC Test und Spring SecurityTest abgedeckt.<br/> HSQLDB wird für Tests verwendet. Aktuelle Stellenangebote werden in PostgreSQL (oder H2DB) gespeichert und von Ressourcen aktualisiert:<br/>
+login.body=mit Registrierung | Autorisierung und rollenbasierte Zugriffsrechte (USER, ADMIN).<br/>Administrator kann | erstellen bearbeiten | Benutzer und Stellenangebote löschen, Benutzer können ihr Profil über UI (über AJAX) und REST-Schnittstelle mit Basisberechtigung verwalten. Stellenangebote können gefiltert werden | aktualisiert | markiert (Farbe der Zeilen ändert sich, individuelle Auswahl wird in DB gespeichert). REST-Controller und alle Dienste werden durch JUnit-Tests mit Spring MVC Test und Spring SecurityTest abgedeckt. HSQLDB wird für Tests verwendet. Aktuelle Stellenangebote werden in PostgreSQL (oder H2DB) gespeichert und von Ressourcen aktualisiert:<br/>
 login.doc=Dokumentation
 
 password.password=Passwort :
