--- a/config/messages/app_fr.properties
+++ b/config/messages/app_fr.properties
@@ -77,7 +77,7 @@ login.registration=Inscription &raquo;
 login.as_admin=Se connecter en tant qu'Admin
 login.as_user=Se connecter en tant qu'User
 login.project=Projet Java Entreprise
-login.body=avec inscription | autorisation et droits d'accès basés sur les rôles (USER, ADMIN).<br/>L'administrateur peut créer | modifier | supprimer des utilisateurs et des postes vacants, les utilisateurs peuvent gérer leur profil via l'interface utilisateur (via AJAX) et l'interface REST avec une autorisation de base. Les postes vacants peuvent être filtrés | mis à jour | marqué (la couleur des lignes change, le choix individuel est stocké dans la base de données).<br/>Les contrôleurs REST et tous les services sont couverts par les tests JUnit à l'aide de Spring MVC Test et Spring SecurityTest.<br/> HSQLDB est utilisé pour les tests. Les postes vacants réels sont stockés dans PostgreSQL (ou H2DB) et mis à jour à partir des ressources :<br/>
+login.body=avec inscription | autorisation et droits d'accès basés sur les rôles (USER, ADMIN).<br/>L'administrateur peut créer | modifier | supprimer des utilisateurs et des postes vacants, les utilisateurs peuvent gérer leur profil via l'interface utilisateur (via AJAX) et l'interface REST avec une autorisation de base. Les postes vacants peuvent être filtrés | mis à jour | marqué (la couleur des lignes change, le choix individuel est stocké dans la base de données). Les contrôleurs REST et tous les services sont couverts par les tests JUnit à l'aide de Spring MVC Test et Spring SecurityTest. HSQLDB est utilisé pour les tests. Les postes vacants réels sont stockés dans PostgreSQL (ou H2DB) et mis à jour à partir des ressources:<br/>
 login.doc=Documentation
 
 password.password=Mot de passe :
