--- a/config/messages/app_pl.properties
+++ b/config/messages/app_pl.properties
@@ -3,8 +3,8 @@ app.footer=Aplikacja oparta na przykładzie
 
 user.name=Nazwa
 user.name_=nazwa
-user.email=E-mail
-user.email_=e-mail
+user.email=Email
+user.email_=email
 user.roles=Role
 user.active=aktywny
 user.registered=Zarejestrowany
@@ -77,7 +77,7 @@ login.registration=Rejestracja &raquo;
 login.as_admin=Zaloguj się jako Admin
 login.as_user=Zaloguj się jako User
 login.project=Projekt Java Enterprise
-login.body=z rejestracją | autoryzacja i prawa dostępu oparte na rolach (USER, ADMIN).<br/>Administrator może tworzyć | edytuj | usuwać użytkowników i wolne miejsca, użytkownicy mogą zarządzać swoim profilem za pomocą interfejsu użytkownika (przez AJAX) i interfejsu REST z podstawowymi uprawnieniami. Oferty pracy można filtrować | zaktualizowany | zaznaczone (kolor zmian wierszy, indywidualny wybór jest przechowywany w DB).<br/>Kontrolery REST i wszystkie usługi są objęte testami JUnit z wykorzystaniem Spring MVC Test i Spring SecurityTest.<br/> HSQLDB jest używany do testów. Rzeczywiste oferty pracy są przechowywane w PostgreSQL (lub H2DB) i aktualizowane z zasobów:<br/>
+login.body=z rejestracją | autoryzacja i prawa dostępu oparte na rolach (USER, ADMIN).<br/>Administrator może tworzyć | edytuj | usuwać użytkowników i wolne miejsca, użytkownicy mogą zarządzać swoim profilem za pomocą interfejsu użytkownika (przez AJAX) i interfejsu REST z podstawowymi uprawnieniami. Oferty pracy można filtrować | zaktualizowany | zaznaczone (kolor zmian wierszy, indywidualny wybór jest przechowywany w DB). Kontrolery REST i wszystkie usługi są objęte testami JUnit z wykorzystaniem Spring MVC Test i Spring SecurityTest. HSQLDB jest używany do testów. Rzeczywiste oferty pracy są przechowywane w PostgreSQL (lub H2DB) i aktualizowane z zasobów:<br/>
 login.doc=Dokumentacja
 
 password.password=Hasło :
