--- a/config/messages/app_ru.properties
+++ b/config/messages/app_ru.properties
@@ -13,7 +13,7 @@ user.password_=пароль
 user.add=Добавить нового пользователя
 user.edit=Редактировать данные пользователя
 user.invite=Вы зарегистрированы. Пожалуйста, можете войти в приложение
-user.duplicate=Пользователь с таким Email раньше уже зарегистрирован
+user.duplicate=такая [Почта] раньше уже зарегистрирована
 
 vacancy.duplicate=Вакансия уже есть в базе данных 
 vacancy.vacancy=Вакансия
@@ -77,7 +77,7 @@ login.registration=Регистрация &raquo;
 login.as_admin=Войти как Admin
 login.as_user=Войти как User
 login.project=Java Enterprise проект
-login.body= с регистрацией | авторизацией и правами доступа на основе ролей (USER, ADMIN).<br/>Администратор может создавать | редактировать | удалять пользователей и вакансии, пользователи могут управлять своим профилем через UI (по AJAX) и по REST интерфейсу с базовой авторизацией. Вакансии можно фильтровать | обновлять | отмечать (меняется цвет строки, индивидуальный выбор сохраняется в базе данных).<br/>REST и все сервисы покрываются JUnit тестами, при этом используется Spring MVC Test и Spring SecurityTest.<br/>Для тестов используется HSQLDB. Актуальные вакансии хранятся в PostgreSQL(или H2DB), обновляются из ресурсов:<br/>
+login.body= с регистрацией | авторизацией и правами доступа на основе ролей (USER, ADMIN).<br/>Администратор может создавать | редактировать | удалять пользователей и вакансии, пользователи могут управлять своим профилем через UI (по AJAX) и по REST интерфейсу с базовой авторизацией. Вакансии можно фильтровать | обновлять | отмечать (меняется цвет строки, индивидуальный выбор сохраняется в базе данных).<br/>REST и все сервисы покрываются JUnit тестами через HSQLDB (embeded), при этом используется Spring MVC Test и Spring SecurityTest. Актуальные вакансии хранятся в PostgreSQL(или H2DB), обновляются из ресурсов:<br/>
 login.doc=документация
 
 password.password=Пароль :
